syntax = "proto3";

package v2ray.core.transport.internet.reality;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Reality";
option go_package = "github.com/frogwall/f2ray-core/v5/transport/internet/reality";
option java_package = "com.v2ray.core.transport.internet.reality";
option java_multiple_files = true;

message Config {
  string server_name = 1;
  bytes public_key = 2;      // X25519 public key bytes (client)
  bytes short_id = 3;        // 8~16 bytes
  string fingerprint = 4;    // uTLS fingerprint name
  bool show = 5;             // verbose for debugging
  string spider_x = 6;       // optional client-provided path (compat)
  
  // Server-only fields
  bytes private_key = 7;     // X25519 private key bytes (server)
  repeated string server_names = 8;  // Allowed server names
}
